--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-cli": "^6.1.2",
     "postcss-easings": "^2.0.0",
     "postcss-import": "^12.0.1",
+    "postcss-import-url": "^4.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "rollup": "^1.10.1",
